fix POM